src/static/css/style.css
html {
  color: #030303;
  font: caption;
  padding-bottom: 2em;
  background-color: #E2E2E2;
}

.flex {
  display: flex;
}

.hidden {
  display: none !important;
}

.site-font {
  /* Taken from Github */
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

a:hover {
  text-decoration: none !important;
}

li.menu-header,
div.menu-header {
  font-size: 14px;
}


#nav {
  background-color: #616669;
}

.navbar-brand, .navbar-nav > li > a {
  color: white !important;
}

#nav .dropdown-menu {
  margin-top: -4px;
  border-radius: 4px;
  box-shadow: 0 3px 12px rgba(27,31,35,0.15);
}

.signed-in-title {
  color: #586069;
  margin: 2px 0;
}

.signed-in-value {
  color: #586069;
  font-weight: 600;
}

.menu-header-value {
  color: #586069;
}

.small-spinner-wrapper {
  margin: auto;
  width: 14px;
  font-size: 28px;
  color: #5e5e5e;
}

/* Styling for the /settings page */

div.weight-slider-container input.weight-slider {
  -webkit-appearance: none;  /* Override default CSS styles */
  appearance: none;
  height: 5px; /* Specified height */
  margin: auto;
  margin-left: 0;
  border-radius: 4px;
  background: #d3d3d3; /* Grey background */
  outline: none; /* Remove outline */
  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
}

div.weight-slider-container input.weight-slider:hover {
    opacity: 1; /* Fully shown on mouse-over */
}

.slider-value {
  width: 2em;
  margin: 0px 8px;
  font-weight: bold;
}

/* Everything but Firefox */
.weight-slider::-webkit-slider-thumb {
    cursor: pointer; /* Cursor on hover */
}

/* Firefox - not working new firefox */
.weight-slider::-moz-range-thumb {
    cursor: pointer; /* Cursor on hover */
}

.weight-slider-container {
  display: flex;
  margin: 4px 0px;
}

.spinner-wrapper {
  margin: auto;
  width: 44px;
  font-size: 44px;
  margin-top: 10%;
  color: #5e5e5e;
}

.account-value {
  font-size: 16px;
}

.unlinked-msg {
  font-size: 15px;
  color: #23527c;
}

.unlinked-msg:hover {
  cursor: pointer;
}

.linked-delete-icon:hover {
  color: #81b9c9;
  cursor: pointer;
}

.settings-header-top {
  font-weight: bold;
  font-size: 26px;
  margin-bottom: 4px;
}

.settings-header {
  font-weight: bold;
  font-size: 26px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.account-img {
  max-height: 20px !important;
  max-width: 20px !important;
  margin-right: 8px;
}

.slider-img {
  max-height: 20px !important;
  max-width: 20px !important;
}

.unlinked-container {
  display: flex;
}

.btn-w-reset {
  margin-right: 2px;
}

.btn-w-submit {
  margin-left: 2px;
}

.btn-weights-group {
  float: right;
}

.row {
  margin-right: 0 !important;
}

.account-row {
  height: 24px;
  margin: 2px 0px;
}

.settings-page {
  overflow: auto;
  width: 800px;
  padding: 10px;
  border-radius: 4px;
  margin: auto;
  font-size: 14px;
  background: #f8f8f8;
  margin-top: 60px;
}

/* End of styling for the /settings page */

#main .navbar-default .navbar-nav > .open > a,
#main .navbar-default .navbar-nav > .open > a:focus,
#main .navbar-default .navbar-nav > .open > a:hover {
  background-color: #7e7e7e;
}

header {
  padding: 2em;
}

header .logo {
  display: block;
  margin: 0 auto;
  max-width: 400px;
  width: 100%;
}

footer {
  margin: 4em auto;
  padding: 2em;
  text-align: center;
  max-width: 800px;
  width: 100%;
}

footer p {
  line-height: 1.2em;
  margin: 0 0 1em 0;
}

/* Start of login page styling */

.login-page, .signup-page {
  max-width: 600px;
  margin: auto;
  margin-top: 60px;
  padding: 0 4px;
}

.navbar-default .navbar-toggle .icon-bar {
  background-color: white !important;
}

.error-container {
	padding: 0px 4px;
}

/* End of login page styling */

.signup-link {
  color: #333;
}

.signup-link:hover {
  color: #333;
}

.signup-button {
  float: right;
}

.larger-font {
  font-size: larger;
}

.inherit {
  color: inherit;
}

a.twiter-author-link:hover,
a.twitter-link:hover {
  color: #337ab7
}

.retweet-indicator {
  color: #777;
  margin-bottom: 8px;
}

.tweet-time {
  color: #777;
  font-size: smaller;
  font-weight: 600;
  font-size: small;
  margin-left: 4px;
}

.retweet-text {
  padding-left: 4px;
}

.twitter-profile-img {
  width: 48px;
  height: 48px;
  margin-right: 8px;
  border-radius: 32px;
  float: left;
}

.tweet-text {
  overflow-x: auto;
  font-weight: 500;
}

.tweet-text-container {
  overflow-x: auto;
}

.tweet-stats {
  margin-top: 4px;
}

.retweet-icon {
  color: #18b760;
}

.retweet-count {
  margin: 0 8px 0 4px;
}

.favourite-count {
  margin: 0 0 0 4px;
}

.favourite-icon {
  color: #e0245e;
}

.post-score-light {
  margin-right: 4px;
}

.post-info-bottom,
.post-info-top {
  display: inline-block;
}

.post-score-bold {
  margin-right: 4px;
  font-weight: bold;
}

.post-img {
  max-height: 32px !important;
  max-width: 32px !important;
  margin-right: 8px;
}

.post-description {
  display: flex;
}

.post-container {
  box-shadow: 2px 8px 4px #DDD;
  border: 1px solid #ddd;
  width: 100%;
  color: #444444;
  padding: 16px;
  background-color: #FFFFFF;
}

.post-container:hover {
  background-color: #F0F0F0;
}

.post-title {
  font-weight: bold;
  flex: 1;
}

.post-body {
  padding-top: 8px;
}

.post-body img {
    width: 100%;
    height: auto;
    padding-bottom: 8px;
}

.post-body :last-child {
    margin-bottom: 0;
    padding-bottom: 0;
}

.not-found {
  margin: 0 auto;
  max-width: 800px;
  padding: 2em;
  text-align: center;
  width: 100%;
}

.not-found h1 {
  font-size: 3em;
  font-weight: bold;
}

.not-found h2 {
  font-size: 2em;
  font-weight: bold;
}

.hero-img-container {
  margin: auto;
  width: 100%;
  height: 100%;
  overflow: hidden;
  margin-top: 8px;
}

.hero-img {
  width: 100%;
  height: auto;
  z-index: 100;
  border-radius: 2px;
}

.video-container {
  position: relative;
  height: 100%;
  padding-top: 56.25%;
}

.video-container iframe {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.truncated-post-height {
    max-height: 800px;
}

.post-content {
  overflow-y: hidden;
}

.home-page {
  margin-top: 60px;
}

.post-list {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  max-width: 800px;
  margin: auto;
}

.post-container:hover {
    background-color: white;
}

.list-group-item {
  display: block !important;
  border: none !important;
  padding: 0 !important;
  background-color: #e2e2e2 !important;
}

.app-container {
  background-color: #e2e2e2;
}

.post-img {
  width: 16px;
  height: 16px;
  margin-left: 16px;
  margin-right: 0;
  opacity: 0.5;
}

.post-info-container {
  overflow:hidden;
}

#post-info-top {
  float: left;
}

#post-info-bottom {
  overflow:hidden;
}

@media screen and (max-width: 400px) {
   #post-info-top {
    float: none;
    margin-right:0;
    width:auto;
  }

  .author-prefix {
    display: none;
  }

  .tweet-time {
    display: block;
  }
}

@media screen and (max-width: 768px) {
  .nav a,
  .signed-in-title,
  .signed-in-value {
    color: white !important;
  }

  .spinner-wrapper {
    margin-top: 60px !important;
  }
}

.author-prefix {
  padding-right: 4px;
}

.post-info {
  width: 100%;
  text-decoration: none;
}

.post-header {
  display: flex;
}

a.post-header-link:visited {
  color: #444444;
  text-decoration: none;
}

.post-header-link {
  color: #444444;
  font-size: 16px;
}

.comment-score {
  padding-top: 2px;
  margin: 0 4px;
  font-size: smaller;
}

.inner-comments {
  margin-left: 16px;
}

.toggle-comments {
  border: 1px solid #ddd;
  border-top: none;
  border-radius: 0px;
  background-color: #FFFFFF;
  display: block;
  width: 100%;
  height: 20px;
  outline: none;
  margin-top: -16px;
}

.comments-section {
  margin: auto;
  width: 99%;
  height: 100%;
  padding: 16px;
  padding-left: 0;
  background-color: #fbfbfb;
  display: block;
  box-shadow: inset 0px 1px 4px 1px #ddd;
}

.comments-section > div > .comment {
  padding-top: 8px;
  border-top: #DDD 1px solid;
}

div > .comment:first-child {
  margin-top: 0;
  padding-top: 0;
  border-top-style: none;
}

.comment-author {
  font-weight: bold;
}

.expand-icon {
  width: 16px;
  height: 16px;
  padding-bottom: 4px;
}

.transparent-button {
    background: none;
    outline: none;
    border: none;
    padding: 0;
    margin: 0;
    display: inline-block;
    text-align: left;
}

.comment {
  margin-top: 8px;
  margin-bottom: 8px;
  margin-left: 16px;
}

.comment-author {
  font-size: 14px;
  margin: 0;
  display: inline-block;
  font-weight: bold;
}

.more-comments {
  font-size: 14px;
  margin: 0;
  display: inline-block;
  font-weight: bold;
}

.more-comments-link {
  margin-left: 16px;
}

.shift-right {
  margin-left: 16px;
}

.hidden {
  display: None;
}

a {
  color: #337ab7;
  text-decoration: none;
}

a:hover {
  color: #23527c;
  text-decoration: none;
}

